--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,4 +1,11 @@
 {
+    "semi": true,
+    "singleQuote": false,
+    "tabWidth": 4,
+    "trailingComma": "es5",
+    "printWidth": 100,
+    "arrowParens": "always",
+    "endOfLine": "lf",
     "overrides": [
         {
             "files": "*.move",
@@ -6,6 +13,13 @@
                 "parser": "move",
                 "tabWidth": 4,
                 "useModuleLabel": true
+            }
+        },
+        {
+            "files": "*.{ts,tsx}",
+            "options": {
+                "tabWidth": 4,
+                "printWidth": 100
             }
         }
     ],
